# innowise_laboratory

lecture_1/: main.py  pyproject.toml
lecture_2/: main.py
lecture_3/: main.py
lecture_4/: queries.sql  school.db  tables.sql  tasks.sql  values.sql
lecture_5/: README.md  pyproject.toml
lecture_5/book_api/: database.py  library.db  main.py  schemas.py
