[project]
name = "book api"
version = "0.1.0"
description = ""
authors = [
    {name = "froonn",email = "137333195+froonn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[dependency-groups]
dev = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.124.2,<0.125.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
